[package]

name = "hap_http_parser"
description = "HAP Http request/response parser for rust"
version = "0.0.3"
authors = ["<aunoor@gmail.com>"]
license = "MIT"

documentation = "http://magic003.github.io/http-parser-rs/doc/http_parser/"
homepage = "https://github.com/aunoor/hhap-parser-rs"
repository = "https://github.com/aunoor/hhap-parser-rs"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
